(include_subdirs unqualified)

(library
 (name mylib)
 (public_name fancy.mylib)
 (wrapped false)
 (synopsis "the library demo")
 (libraries
  core
  fmt
  ocamlgraph
  ; ocamldot
  )
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_deriving.std)))

(env
 (dev
  (flags
   (:standard -w -33 -w -26))))
